Argo/argo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-deployment
spec:
  containers:
  - args:
    - server
    image: arogoproj/argocli:latest
    name:  argo-server
